@@ -2,6 +2,8 @@ package model.classes.factory;
 
 import model.classes.players.Player;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class PlayerFactory {
@@ -11,6 +13,6 @@ public class PlayerFactory {
         Player player3 = new Player("Efiye");
         Player player4 = new Player("John Pork");
 
-        return List.of(player1, player2, player3, player4);
+        return new ArrayList<>(Arrays.asList(player1, player2, player3, player4));
     }
 }
